# MaynoothPaperPrep

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  scraper.py
ui/: __init__.py  styles.py  windows.py
util/: module_scraper.py
