[project]
name = "maynoothpaperprep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "cloudscraper>=1.2.71",
    "markdown>=3.8",
    "openai>=1.76.2",
    "pypdf2>=3.0.1",
    "pyside6>=6.9.0",
    "requests>=2.32.3",
    "tk>=0.1.0",
]
